--- a/html/ui.html
+++ b/html/ui.html
@@ -13,6 +13,7 @@
     <p>Controls:</p>
     <ul>
         <li><span>E:</span> model switch</li>
+        <li><span>X:</span> lock position</li>
         <li><span>RIGHT CLICK:</span> model to forward</li>
         <li><span>MOUSE SCROLL:</span> rotation</li>
         <li><span>MOUSE SCROLL + SHIFT:</span> fast rotation</li>
