Refactoring + new ability
New function: Objects can be transferred from other scripts for the purpose of relocation.

--- a/html/ui.html
+++ b/html/ui.html
@@ -10,10 +10,11 @@
 <body>
 
 <div id="container">
-    <p>Controls:</p>
+    <p>ECO PLACEMENT Controls:</p>
+    <p class="command_info">ON/OFF COMMAND: <span id="command"></span></p>
     <ul>
         <li><span>E:</span> model switch</li>
-        <li><span>X:</span> lock position</li>
+        <li><span>X:</span> movement <span id="movement" class="movement_enabled">Enabled</span></li>
         <li><span>RIGHT CLICK:</span> model to forward</li>
         <li><span>MOUSE SCROLL:</span> rotation</li>
         <li><span>MOUSE SCROLL + SHIFT:</span> fast rotation</li>
